Final update to slides

--- a/2023/WFA/index.Rmd
+++ b/2023/WFA/index.Rmd
@@ -40,9 +40,13 @@ output:
 
 # .center.pull[Key Methodological Innovation]
 
+<br>
+
 - Use option prices to get more equations for estimating moment equations.
 
-- This allows you to estimate contingent firm-specific value effects and state-contingent volatility. Can use these estimated values to back out counterfactual prices. 
+- This allows you to estimate contingent firm-specific value effects and state-contingent volatility. 
+
+- Can use these estimated values to back out counterfactual prices. 
 
 - Instead of using sign restrictions for identification (Borochin 2014), get around label switching by creating a novel method to determine if firm more likely to be a winner or loser each day in pre-estimation period.
 
@@ -133,6 +137,8 @@ dt %>%
 
 # .center.pull[Probability of Passage]
 
+<br>
+
 - Additional thoughts on the $q_{it}$:
 
     - In cases where there *are* prediction market values, could they be used in the model?
@@ -146,6 +152,7 @@ dt %>%
 
 # .center.pull[Use of Options Prices]
 
+<br>
 - Key move in this series of papers now is to use both equity and option prices to measure effects.
 
 - This is clearly very good! 
@@ -158,11 +165,13 @@ dt %>%
   
 - Optimal $\mathcal{J}$ trades off additional signal from overidentification against noise from less liquid options.
 
-  - Would be great to do more work here to optimize this tradeoff.
+  - Would be great to ptimize this tradeoff explicitly.
   
 ---
 
 # .center.pull[Other Design Choices]
+
+<br>
 
 - 100 firms with most liquid options.
 
@@ -186,13 +195,17 @@ dt %>%
 
 # .center.pull[Tests of TCJA]
 
-- Makes sense what was done given low N data points.
+<br>
+
+- Makes sense to me what was done given low N data points.
 
 - But...
 
 --
 
-- **Use PCA or other method to get a lower dimensional set of latent factors in addition / in place of lasso approach.**
+<br>
+
+- **Use PCA or other method to get a lower dimensional set of latent factors in addition to lasso approach.**
 
 - **Consider heat-mapping.**
 
