--- a/2023/WFA/index.Rmd
+++ b/2023/WFA/index.Rmd
@@ -165,7 +165,7 @@ dt %>%
   
 - Optimal $\mathcal{J}$ trades off additional signal from overidentification against noise from less liquid options.
 
-  - Would be great to ptimize this tradeoff explicitly.
+  - Would be great to optimize this trade off explicitly.
   
 ---
 
